demos: Fix alignment of first icon in group

--- a/demos/styles/demo.css
+++ b/demos/styles/demo.css
@@ -531,7 +531,7 @@ p:first-child {
 .demo-icons .oo-ui-fieldLayout {
 	display: inline-block;
 	vertical-align: top;
-	margin: 8px 8px 8px 0;
+	margin: 8px 8px 8px 0 !important; /* stylelint-disable-line declaration-no-important */
 	width: 15.5em;
 	overflow: hidden;
 	text-overflow: ellipsis;
